version/0.22/_sources/api/solver/_autosummary/settings/premix_unburnt_fuel_mf.rst.txt
:orphan:

.. _premix_unburnt_fuel_mf:

premix_unburnt_fuel_mf
======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.premix_unburnt_fuel_mf.premix_unburnt_fuel_mf
    :show-inheritance:

.. rubric:: Attributes

====================================================   ====================================================

Attribute                                                                                           Summary

====================================================   ====================================================
:ref:`option <option_12>`                                  Select method for calculating material property.

:ref:`value <value_11>`                                                Specify the constant property value.

:ref:`user_defined_function <user_defined_function>`                         Specify user defined function.

====================================================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

